2012-11-20  Robert Kroeger  <rjkroege@chromium.org>

        [chromium] Use embedder-supported gesture curves
        https://bugs.webkit.org/show_bug.cgi?id=100884

        Reviewed by James Robinson.

        Use embedder-provided gesture animation curves via WebKit api interfaces.
        Tested by existing tests.

        * src/WebCompositorInputHandlerImpl.cpp:
        (WebKit::WebCompositorInputHandlerImpl::handleGestureFling):
        (WebKit::WebCompositorInputHandlerImpl::scrollBy):
        * src/WebCompositorInputHandlerImpl.h:
        (WebCompositorInputHandlerImpl):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::scrollBy):
        (WebKit::WebViewImpl::handleGestureEvent):
        (WebKit::WebViewImpl::transferActiveWheelFlingAnimation):
        * src/WebViewImpl.h:
        (WebCore):
        (WebKit):
        (WebViewImpl):

2012-11-20  Tony Chang  <tony@chromium.org>

        When calling DocumentStyleSheetCollection::addUserSheet, pass in a user sheet
        https://bugs.webkit.org/show_bug.cgi?id=102835

        Reviewed by Ojan Vafai.

        After r135082, Chromium browser_tests were triggering the ASSERT in
        StyleResolver::collectRulesFromUserStyleSheets. Add an ASSERT that will
        trigger earlier and make it clear in the Chromium code that we're always
        inserting user level styles.

        * src/WebDocument.cpp:
        (WebKit::WebDocument::insertUserStyleSheet):

2012-11-20  Istiaque Ahmed  <lazyboy@chromium.org>

        Provide page/window coordinates to plugin's local coordinates translation in WebPluginContainer.
        https://bugs.webkit.org/show_bug.cgi?id=102339

        Reviewed by Adam Barth.

        This change will allow converting a page's window coordinates to plugins's local coordinates,
        taking CSS transformations into account. Embedder page of the plugin can use this information
        for targetting elements inside the plugin (e.g. devtools can inspect a specific element at the